# tetris.py

./: .gitignore  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
tetris/: __init__.py  __main__.py  app.py  blocks.py  core.py  exceptions.py  user_interface.py
