[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "Classic tetris game implemented with curses in Python"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.scripts]
tetris = "tetris.app:sync_main"

[tool.poetry.dependencies]
python = ">=3.6,<4"
trio = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
mypy = "^0.790"
black = "^20.8b1"
tox = "^3.20.1"
tox-ini-fmt = "^0.5.0"
pylint = "^2.6.0"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

